# Rust-Vs-Python-Test

./: .gitignore  Cargo.toml  LICENSE  README.md  Versus.py  pyproject.toml
src/: lib.rs
